{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 27,
  "lineage": "c681b08f-ebe1-1f71-c326-63aab4b50b14",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:035825521573:vpc/vpc-0fc248fc45ee4cfab",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c73684f0dcb1bb85",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1c379877",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fc248fc45ee4cfab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0235ecc4aa7bb47b4",
            "owner_id": "035825521573",
            "state": "available",
            "tags": {
              "BILLINGCODE": "FPX00494-01-00-AW-3307",
              "BILLINGCONTACT": "klakshminarasimha@deloitte.com",
              "COUNTRY": "US",
              "CSCLASS": "Confidential",
              "CSQUAL": "Confidential",
              "CSTYPE": "Internal",
              "ENV": "HU-19",
              "ENVIRONMENT": "NPD",
              "FUNCTION": "CON",
              "MEMBERFIRM": "US",
              "Name": "hu19-tf-vpc",
              "PRIMARYCONTACT": "klakshminarasimha@deloitte.com",
              "SECONDARYCONTACT": "hivarshney@deloitte.com"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:035825521573:security-group/sg-0ab91e4296ed9ea81",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab91e4296ed9ea81",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002dcfc4b207ea91b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20211129052637701800000002",
            "name_prefix": "terraform-",
            "owner_id": "035825521573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ec2"
            },
            "tags_all": {
              "Name": "allow ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc248fc45ee4cfab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_allow_rule"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:035825521573:security-group/sg-002dcfc4b207ea91b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002dcfc4b207ea91b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL/Aurora",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20211129052632035900000001",
            "name_prefix": "terraform-",
            "owner_id": "035825521573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh,http,https"
            },
            "tags_all": {
              "Name": "allow ssh,http,https"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc248fc45ee4cfab"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:035825521573:subnet/subnet-0ae4c4f57f41e7c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.8.0/21",
            "id": "subnet-0ae4c4f57f41e7c3e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035825521573",
            "vpc_id": "vpc-0fc248fc45ee4cfab"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:035825521573:subnet/subnet-0f7ad22b8d2bdcf6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.236.0/22",
            "id": "subnet-0f7ad22b8d2bdcf6c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "035825521573",
            "vpc_id": "vpc-0fc248fc45ee4cfab"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}